hphp/test/slow/parser/hh-reserved-name-nothing-1.php.expectf
Fatal error: Cannot use `Nothing` as a type name as it is reserved in %s on line 3
